crates/keron-lang/tests/corpus/errors/check/contains_wrong_element_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 4:31
  |
4 | val n: Boolean = contains(xs, 42)
  |                               ^^
